--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<tr>
+			<th>Roll number</th>
+			<th>Name</th>
+		</tr>
+		<tr>
+			<td>101</td>
+			<td>Sai yadav</td>
+		</tr>
+		<tr>
+			<td>102</td>
+			<td>prasad</td>
+		</tr>
+		<tr>
+			<td>103</td>
+			<td>chintu</td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
