--- a/main.html
+++ b/main.html
@@ -9,10 +9,13 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table>
+		<thead>
 		<tr>
 			<th>Roll number</th>
 			<th>Name</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>101</td>
 			<td>Sai yadav</td>
@@ -25,6 +28,7 @@
 			<td>103</td>
 			<td>chintu</td>
 		</tr>
+		</tbody>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
